--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -1762,7 +1762,7 @@ This permits us to make the following fundamental construction:
 \begin{prop}[Invariance of partition function under $Q$-exact deformations] \label{prop:Z-deformation-invariance}
 Suppose $V$ is a super vector space with measure $\de \mu$.
 Let $\{S_t\}$ be a family of actions,
-invariant under a family of odd symmetries $Q_t$,
+invariant under a family of divergence-free odd symmetries $Q_t$,
 i.e. $Q_t S_t = 0$.
 Finally, suppose
 \begin{equation}
