--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -222,16 +222,15 @@
 }
 
 @Article{Witten2012,
-  author        = {Edward Witten},
-  title         = {Notes On Supermanifolds and Integration},
-  __markedentry = {[andy:]},
-  abstract      = {These are notes on the theory of supermanifolds and integration on them, aiming to collect results that are useful for a better understanding of superstring perturbation theory in the RNS formalism.},
-  date          = {2012-09-11},
-  eprint        = {1209.2199v3},
-  eprintclass   = {hep-th},
-  eprinttype    = {arXiv},
-  file          = {online:http\://arxiv.org/pdf/1209.2199v3:PDF},
-  keywords      = {hep-th, math.DG},
+  author      = {Edward Witten},
+  title       = {Notes On Supermanifolds and Integration},
+  abstract    = {These are notes on the theory of supermanifolds and integration on them, aiming to collect results that are useful for a better understanding of superstring perturbation theory in the RNS formalism.},
+  date        = {2012-09-11},
+  eprint      = {1209.2199v3},
+  eprintclass = {hep-th},
+  eprinttype  = {arXiv},
+  file        = {online:http\://arxiv.org/pdf/1209.2199v3:PDF},
+  keywords    = {hep-th, math.DG},
 }
 
 @Proceedings{Vafa2001,
@@ -242,7 +241,7 @@
   series        = {AMS/IP Studies in Advanced Mathematics},
   publisher     = {American Mathematical Society, Providence, RI; International Press, Somerville, MA},
   isbn          = {0-8218-2159-8},
-  __markedentry = {[andy:6]},
+  __markedentry = {[andy:]},
   booktitle     = {Proceedings of the school held at {H}arvard {U}niversity, {C}ambridge, {MA}, {J}anuary 1999},
   keywords      = {00B25 (14-06 32-06 53-06)},
   mrnumber      = {1876062},
@@ -288,6 +287,94 @@
   mrnumber   = {674406},
   mrreviewer = {A. Verona},
   url        = {http://dx.doi.org/10.1007/BF01399506},
+}
+
+@Article{MR85e:58041,
+  author     = {Atiyah, Michael F. and Bott, Raoul},
+  title      = {The moment map and equivariant cohomology},
+  journal    = {Topology},
+  year       = {1984},
+  volume     = {23},
+  number     = {1},
+  pages      = {1--28},
+  issn       = {0040-9383},
+  bibliodb   = {yes},
+  coden      = {TPLGAF},
+  fjournal   = {Topology. An International Journal of Mathematics},
+  mrclass    = {58F05 (55N91 57R20 57R22)},
+  mrnumber   = {85e:58041},
+  mrreviewer = {G. J. Heckman},
+  owner      = {andy},
+  timestamp  = {2017.09.16},
+}
+
+@Article{MR705039,
+  author     = {Berline, Nicole and Vergne, Mich\`ele and},
+  title      = {Z\'eros d'un champ de vecteurs et classes caract\'eristiques \'equivariantes},
+  journal    = {Duke Math. J.},
+  year       = {1983},
+  volume     = {50},
+  number     = {2},
+  pages      = {539--549},
+  issn       = {0012-7094},
+  fjournal   = {Duke Mathematical Journal},
+  mrclass    = {58G10 (57R20 58A10)},
+  mrnumber   = {705039},
+  mrreviewer = {Italo Jos\'e Dejter},
+  owner      = {andy},
+  timestamp  = {2017.09.16},
+  url        = {http://projecteuclid.org.ezproxy.lib.utexas.edu/euclid.dmj/1077303208},
+}
+
+@Article{MR877639,
+  author     = {Lott, John},
+  title      = {Supersymmetric path integrals},
+  journal    = {Comm. Math. Phys.},
+  year       = {1987},
+  volume     = {108},
+  number     = {4},
+  pages      = {605--629},
+  issn       = {0010-3616},
+  fjournal   = {Communications in Mathematical Physics},
+  mrclass    = {81F99 (58D15 58D30 58G10 81C35)},
+  mrnumber   = {877639},
+  mrreviewer = {Akira Asada},
+  owner      = {andy},
+  timestamp  = {2017.09.16},
+  url        = {http://projecteuclid.org.ezproxy.lib.utexas.edu/euclid.cmp/1104116626},
+}
+
+@Article{MR816738,
+  author     = {Atiyah, M. F.},
+  title      = {Circular symmetry and stationary-phase approximation},
+  journal    = {Ast\'erisque},
+  year       = {1985},
+  number     = {131},
+  pages      = {43--59},
+  issn       = {0303-1179},
+  note       = {Colloquium in honor of Laurent Schwartz, Vol. 1 (Palaiseau, 1983)},
+  fjournal   = {Ast\'erisque},
+  mrclass    = {58G10 (58D20 58G15)},
+  mrnumber   = {816738},
+  mrreviewer = {Hubert Gollek},
+  owner      = {andy},
+  timestamp  = {2017.09.16},
+}
+
+@Article{Alvarez-Gaume1983b,
+  author        = {Alvarez-Gaume, Luis},
+  title         = {{Supersymmetry and the Atiyah-Singer Index Theorem}},
+  journal       = {Commun. Math. Phys.},
+  year          = {1983},
+  volume        = {90},
+  pages         = {161},
+  __markedentry = {[andy:6]},
+  booktitle     = {{MATHEMATICAL PHYSICS VII. PROCEEDINGS, 7TH INTERNATIONAL CONGRESS, BOULDER, USA, AUGUST 1-10, 1983}},
+  doi           = {10.1007/BF01205500},
+  owner         = {andy},
+  reportnumber  = {Print-83-0368-Rev.(PRINCETON), HUTP-83/A031a},
+  slaccitation  = {%%CITATION = CMPHA,90,161;%%},
+  timestamp     = {2017.09.16},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
