--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -2058,7 +2058,7 @@ take the odd function
 where in the last line we defined $Y_i = g_{ij} Y^j$.
 Then we have
 \begin{equation}
-  Q \Psi = g(Y,Y) - \de(gY) = Y^i Y_i - \psi^i \psi^k \partial_{x^k} Y_i
+  Q \Psi = g(Y,Y) + \de(gY) = Y^i Y_i - \psi^i \psi^k \partial_{x^k} Y_i
 \end{equation}
 and 
 \begin{equation} \label{eq:Qpsi-closed}
